modules/network/security_group/alb/main.tf
module "naming" {
  source     = "../../../common/naming"
  env        = var.env
  system     = var.system
  service    = "network"
  resource   = "alb-sg"
  department = var.department
}

resource "aws_security_group" "this" {
  name   = module.naming.name
  vpc_id = var.vpc_id

  ingress {
    description = "Allow HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = [var.allowed_cidr]
  }

  ingress {
    description = "Allow HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = [var.allowed_cidr]
  }

  ingress {
    description = "Allow test listener for Blue/Green"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = [var.allowed_cidr]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = module.naming.tags
}
